# fireshape

./: .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  Makefile  README.md  activate.sh  activate_alberto.sh  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build.yml  docker.yml  pr.yml  push.yml  test.yml
circleci/: config.yml
docker/: Dockerfile  Dockerfile.firedrake4tests  Dockerfile.fireshape  Dockerfile.fireshape4tests  build-image.sh  push-image.sh
docker/dockerhub/: Dockerfile
docker/dockerhub_firedrake4tests/: Dockerfile
docs/: Makefile  conf.py  example.rst  index.rst  make.bat
docs/source/: ROL.rst  conf.py  example_L2tracking.rst  example_dido.rst  example_heat.rst  example_levelset.rst  example_pipe.rst  index.rst  installation.rst  introduction.rst  levelset.py  levelset.py.rst  levelset.rst  (+3 more)
examples/: levelset.py  levelset_spline.py  multigrid.py  poisson.py
fireshape/: Makefile  __init__.py  bilinearform.py  boundary_extension.py  constraint.py  control.py  control_constraint.py  errors.py  femcontrol.py  gmsh_helpers.py  innerproduct.py  minimalexamplesplines.py  objective.py  pde_constraint.py
shapelib/: femcontrol.py
tests/: test_L2tracking.py  test_L2tracking_as_PDEconstrainedObjective.py  test_L2tracking_new.py  test_TimeTracking.py  test_adding_regularization.py  test_box_constraints.py  test_bspline_control_space.py  test_checkpointing.py  test_equality_constraint.py  test_levelset.py  test_levelset_FeControlSpace.py  test_levelset_OtherControlSpace.py  test_periodic.py  test_spectral_constraint.py  test_vectorkron.py  test_volume_taylortest.py  test_volumeconstraint.py  test_wavelet_control_space.py
(+160 files in other folders)
