[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fireshape"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "pyroltrilinos",
  "scipy",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Unix",
]

[project.urls]
Repository = "https://github.com/fireshape/fireshape"

[project.optional-dependencies]
vtk = [
  "vtk",
]

[tool.flake8]
ignore = ["E741", "E226"]
exclude = [".git", "__pycache__", "build", ".tox", "dist"]

[tool.setuptools.packages.find]
namespaces = false
